# nationalregnskabet

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  project-kickoff.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-model.md
docs/decisions/: 001-warehouse-choice.md  002-bronze-retention.md  003-institution-seed-strategy.md  004-metric-taxonomy.md
src/danish_economy/: __init__.py
src/danish_economy/api/: __init__.py  db.py  main.py
src/danish_economy/api/routers/: finanslov.py  hello.py  institution.py  kommune.py  timeseries.py  transfer.py
src/danish_economy/etl/: __init__.py  build.py
src/danish_economy/etl/ingest/: __init__.py  hello.py
src/danish_economy/etl/seeds/: __init__.py  dim_institution.yaml  dim_metric.yaml  paragraf_mapping.yaml
src/danish_economy/etl/transform/: __init__.py
src/danish_economy/warehouse/: __init__.py
tests/: test_dim_institution.py  test_dst_client.py  test_gold_dims.py  test_gold_mapping.py  test_hello.py  test_scd2.py  test_silver_dst.py  test_timeseries_api.py
tests/fixtures/dst/: OFF3_metadata.json  OFF3_raw.csv
web/: Dockerfile  biome.json  package.json  pnpm-lock.yaml
web/public/: kommuner.geojson
web/src/app/: globals.css  home-client.tsx  layout.tsx  loading.tsx  page.tsx  treemap.tsx
web/src/app/finanslov/: charts.tsx  page.tsx
web/src/app/kommuner/: charts.tsx  (+3 more)
web/src/components/: breadcrumbs.tsx  donut-chart.tsx  empty-state.tsx  error-banner.tsx  nav.tsx  skeleton.tsx
web/src/hooks/: use-container-width.ts
web/src/lib/: format.ts
(+47 files in other folders)
